# remit-ai

./: .env.example  .gitignore  AGENTS.md  DEMO_VIDEO_GUIDE.md  DEPLOYMENT_GUIDE.md  License  README.md  opencode.jsonc  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  deploy.py  deployment.sh  docker-compose.yml  game.py  main.py  pyproject.toml  remit.db  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 83430d8f7bc9_initial_migration.py
backend/src/: dependencies.py
backend/src/agents/: __init__.py  chat_agent.py  dex_analyzer.py  masumi_agent.py  ollama_agent.py  rate_optimizer.py  remit_agent.py
backend/src/core/: constant.py  database.py  llm_factory.py  settings.py
backend/src/data/: users.json
backend/src/models/: db_models.py  schemas.py
backend/src/routers/: chat.py  rater.py  rates.py  users.py
backend/src/services/: context_service.py  dex_service.py  masumi_service.py  minswap_service.py  rate_service.py  rater_service.py  transaction_service.py  user_service.py
backend/src/tools/: __init__.py  agent_tools.py  blockfrost_client.py  market_data.py  masumi_integration.py  users.py
backend/tests/: test_users.py
components/: app-navbar.tsx  chat-interface.tsx  connect-wallet-button.tsx  dashboard-analytics.tsx  dex-rates.tsx  hero-section-demo-1.tsx  mesh-provider.tsx  nav-wallet-button.tsx  payee-manager.tsx  remittance-form.tsx  settings-panel.tsx  transaction-history.tsx  wallet-connector.tsx  wallet-state.tsx
(+15 files in other folders)
